Prime Factor Controller, View Model, and View

--- a/SoftwareTest/Views/Shared/_Layout.cshtml
+++ b/SoftwareTest/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Triangle Type", "Index", "Triangle")</li>
                     <li>@Html.ActionLink("Linked List", "Index", "LinkedList")</li>
+                    <li>@Html.ActionLink("Prime Factor", "Index", "PrimeFactor")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
             </div>
