--- a/SoftwareTest/Views/Shared/_Layout.cshtml
+++ b/SoftwareTest/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("Triangle Type", "Index", "Triangle")</li>
                     <li>@Html.ActionLink("Linked List", "Index", "LinkedList")</li>
                     <li>@Html.ActionLink("Prime Factor", "Index", "PrimeFactor")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("SQL Statements", "Index", "Sql")</li>
                 </ul>
             </div>
         </div>
