File Checking in Prime Factor Controller and Message in Home View

--- a/SoftwareTest/Views/Home/Index.cshtml
+++ b/SoftwareTest/Views/Home/Index.cshtml
@@ -7,3 +7,13 @@
     <p class="lead">Cardlytics Software Engineer Test by Mike Williams</p>
 </div>
 
+<div class="row">
+    <div class="well">
+        <p>
+            Thanks again for the opportunity to complete this test. I really enjoyed the challenge. Since the position mainly focused around web development I decided to use an ASP.NET MVC 5 Project to solve the answers.
+            Most of the logic is in the Helpers folder. I placed the linked list class in the Extensions folder. Please contact me at <a href="mailto:cmwilliams@gmail.com">cmwilliams@gmail.com</a> or 404-862-6264 should
+            you have any questions.
+        </p>
+        <p>For the Prime Factor question, I included a sample txt file in the Tests project under the Files directory.</p>
+    </div>
+</div>
